syntax = "proto3";

package com.example.gRPCServer;

option java_multiple_files = true;
option java_package = "com.example.gRPCServer";
option java_outer_classname = "SampleProto";


message SampleRequest {
  string name = 1;
}

message SampleResponse {
  string message = 1;
}


service SampleService{
  rpc SaySampleHello(SampleRequest) returns (SampleResponse);
}
